<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".Show_Payment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Navy_Blue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/cardDetailsLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/cardDetailsLbl"
        android:textColor="#131313"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <ImageView
        android:id="@+id/visa1image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDetailsLbl"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mastervisa" />

    <TextView
        android:id="@+id/cardNoLabel"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_rounded"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="20dp"
        android:text="@string/retrieveCardNoLbl"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnlabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cnlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cardnlabel"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visa1image" />

    <TextView
        android:id="@+id/cardHsNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chNamelbl"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cardNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNoLabel" />

    <TextView
        android:id="@+id/cardNameLabel"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_rounded"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="20dp"
        android:text="@string/retrieveCardHname"
        android:textColor="#070606"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHsNameLabel" />

    <TextView
        android:id="@+id/expDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/expDateLabel"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/exDatelbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNameLabel" />

    <TextView
        android:id="@+id/exDatelbl"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_rounded"
        android:fontFamily="sans-serif-medium"
        android:textColor="#120F0F"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cvcLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cvcLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cvcLabel"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/expDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/cardNameLabel" />

    <TextView
        android:id="@+id/cvcLabel"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/edit_text_rounded"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="20dp"
        android:text="@string/CVCNoRead"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvcLbl"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/Navy_Blue"
        android:fontFamily="sans-serif-black"
        android:text="@string/deletecard"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/Navy_Blue"
        android:fontFamily="sans-serif-black"
        android:text="@string/buttonContinue"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCancel" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/Navy_Blue"
        android:fontFamily="sans-serif-black"
        android:text="@string/updateBtn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exDatelbl" />

</androidx.constraintlayout.widget.ConstraintLayout>